Fixing spacings and alignments for highlighted entries.

--- a/src/assets/sass/partials/entry-post.sass
+++ b/src/assets/sass/partials/entry-post.sass
@@ -6,35 +6,40 @@
   width: 262px
 
   h1
-    margin: 15px 0 10px
+    margin: 16px 0 0
     font-size: $font-size-medium
-    line-height: 1.2
+    line-height: 22px
     color: $color-title
+
+.entry-post__content
+  line-height: 23px
 
 .entry-post__image
   img
     display: block
 
 .entry-post__author
-  margin-top: 10px
-  margin-bottom: 20px
+  margin-top: 13px
+  margin-bottom: 22px
   font-size: 0
 
   > div
     display: inline-block
     vertical-align: middle
     overflow: hidden
-    width: 45px
-    height: 45px
+    width: 32px
+    height: 32px
     margin-right: 10px
     border-radius: 100%
 
   span
     display: inline-block
     vertical-align: middle
+    width: calc(100% - 42px)
     font-family: $font-text
     font-size: $font-size-small
     font-style: italic
+    line-height: 16px
     color: $color-gray
 
 
@@ -46,8 +51,19 @@
   width: 555px
 
   h1
+    margin-top: 15px
     font-size: $font-size-h1
+    line-height: 35px
 
+  .entry-post__author
+    margin-top: 8px
+
+    > div
+      width: 45px
+      height: 45px
+
+    span
+      width: calc(100% - 55px)
 
 .entry-post--secondary
   h1
@@ -55,7 +71,3 @@
 
   .entry-post__author
     margin-top: 20px
-
-    > div
-      width: 32px
-      height: 32px
