--- a/src/assets/sass/partials/header.sass
+++ b/src/assets/sass/partials/header.sass
@@ -4,13 +4,13 @@
 
 .header
   height: 56px
-  margin-bottom: 76px
+  margin-bottom: 84px
   border-bottom: 1px solid #979797
 
   .logo
     width: 45px
     height: 45px
-    margin-top: 7px
+    margin-top: 6px
     z-index: -1
 
     +breakpoint($breakpoint-max-sm)
