--- a/src/assets/sass/partials/navigation.sass
+++ b/src/assets/sass/partials/navigation.sass
@@ -3,7 +3,7 @@
  */
 
 .main-navigation
-  padding-top: 20px
+  padding-top: 17px
 
   +breakpoint($breakpoint-min-md)
     text-align: right
