--- a/src/assets/sass/partials/tag-list.sass
+++ b/src/assets/sass/partials/tag-list.sass
@@ -3,7 +3,7 @@
  */
 
 .tag-list
-  margin-bottom: 5px
+  margin-bottom: 6px
   font-family: $font-base
   font-size: $font-size-smaller
   text-transform: uppercase
